# QuickPass

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  QuickPassGen.py  README.md  SECURITY_FIXES_PLAN.md
.github/workflows/: Info.plist  build.yml  icon.icns
.portfolio/: architecture.md  qa.md  stack.md
og-previews/: og-home.html
src/: app.rs  build.rs  gamification.rs  lockout.rs  main.rs  manager.rs  password.rs  security.rs  settings.rs  usb_export.rs  vault.rs
tests/: integration_tests.rs
